<resources>
    <string name="app_name">ChallengeChapter2</string>
    <string name="et_cost_of_service">Cost of Service</string>
    <string name="tv_how_was_the_service">How was the service ?</string>
    <string name="rb_amazing">Amazing (20%)</string>
    <string name="rb_good">Good (18%)</string>
    <string name="rb_ok">OK (15%)</string>
    <string name="tv_round_up_tip">Round up tip?</string>
    <string name="btn_calculate">calculate</string>
    <string name="tv_tip_amount">Tip Amount</string>
</resources>